fix(fruntier/repository/RecommendRouteFileRepository) : set id of new saved instance without duplication